@@ -1,6 +1,5 @@
 package com.tutorial.springboot.securityoauth2server.transformer;
 
-
 import com.tutorial.springboot.securityoauth2server.dto.AbstractDto;
 import com.tutorial.springboot.securityoauth2server.entity.AbstractEntity;
 
@@ -10,12 +9,19 @@ import java.util.stream.Stream;
 
 import static com.tutorial.springboot.securityoauth2server.util.ReflectionUtils.identifyType;
 import static java.util.Objects.isNull;
+import static java.util.stream.Collectors.toList;
 
 public abstract class AbstractTransformer<ID, ENTITY extends AbstractEntity<ID, ENTITY>, DTO extends AbstractDto<ID, DTO>> {
+
+    private static final boolean ALLOWANCE_EXPOSE_SECURE_INFORMATION = true;
+
+    private static final boolean DIS_ALLOWANCE_EXPOSE_SECURE_INFORMATION = false;
 
     private final Class<ENTITY> entityClass;
 
     private final Class<DTO> dtoClass;
+
+    private boolean exposeSecureInformation = DIS_ALLOWANCE_EXPOSE_SECURE_INFORMATION;
 
     public AbstractTransformer() {
         entityClass = identifyType(1, getClass());
@@ -37,6 +43,11 @@ public abstract class AbstractTransformer<ID, ENTITY extends AbstractEntity<ID, 
                 .setVersion(entity.getVersion());
 
         copyEntityToDto(entity, dto);
+
+        if (exposeSecureInformation == ALLOWANCE_EXPOSE_SECURE_INFORMATION) {
+            exposeSecureInformation(entity, dto);
+        }
+
         return dto;
     }
 
@@ -59,16 +70,15 @@ public abstract class AbstractTransformer<ID, ENTITY extends AbstractEntity<ID, 
     }
 
     public List<DTO> toDtoList(List<ENTITY> entities) {
-        return entities.stream().map(this::toDto).toList();
+        return entities.stream().map(this::toDto).collect(toList());
     }
 
     public DTO[] toDtoArray(ENTITY[] entities) {
         return Stream.of(entities).map(this::toDto).toArray(size -> (DTO[]) Array.newInstance(dtoClass, size));
     }
 
-
     public List<ENTITY> toEntityList(List<DTO> entities) {
-        return entities.stream().map(this::toEntity).toList();
+        return entities.stream().map(this::toEntity).collect(toList());
     }
 
     public ENTITY[] toEntityArray(DTO[] entities) {
@@ -89,6 +99,17 @@ public abstract class AbstractTransformer<ID, ENTITY extends AbstractEntity<ID, 
         } catch (Exception e) {
             return null;
         }
+    }
+
+    public void allowToExposeSecureInformation() {
+        this.exposeSecureInformation = ALLOWANCE_EXPOSE_SECURE_INFORMATION;
+    }
+
+    public void disAllowToExposeSecureInformation() {
+        this.exposeSecureInformation = DIS_ALLOWANCE_EXPOSE_SECURE_INFORMATION;
+    }
+
+    protected void exposeSecureInformation(ENTITY entity, DTO dto) {
     }
 
     protected abstract void copyEntityToDto(ENTITY entity, DTO dto);
