@@ -8,6 +8,7 @@ import org.springframework.security.oauth2.server.authorization.client.Registere
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 public final class RegisteredClientTransformer {
 
@@ -34,18 +35,13 @@ public final class RegisteredClientTransformer {
                         client.getAuthorizationGrantTypes().stream().map(AuthorizationGrantType::getValue).toList()
                 )
                 .setRedirectUri(client.getRedirectUris().stream().findFirst().orElseThrow())
-                .setScopes(client.getScopes().stream().map(s -> new Scope().setName(s)).toList());
+                .setScopes(client.getScopes().stream().map(s -> new Scope().setName(s)).collect(Collectors.toList()));
     }
 
 
     public static List<AuthorizationGrantType> convertStringListToAuthorizationGrantTypes(List<String> grantTypeStrings) {
-        var grantTypes = new ArrayList<AuthorizationGrantType>();
-
-        for (String grantTypeString : grantTypeStrings) {
-            AuthorizationGrantType grantType = new AuthorizationGrantType(grantTypeString.toLowerCase());
-            grantTypes.add(grantType);
-        }
-
-        return grantTypes;
+        return grantTypeStrings.stream()
+                .map(it -> new AuthorizationGrantType(it.toLowerCase()))
+                .collect(Collectors.toList());
     }
 }
